# megamind

./: Cargo.toml  README.md  SKILL.md
docs/: index.html
skill/: SKILL.md
src/: cache.rs  engine.rs  main.rs  mcp.rs  query.rs  results.rs
src/sources/: amp.rs  claude.rs  codex.rs  gemini.rs  goose.rs  mod.rs  opencode.rs  perception.rs  pi.rs
