[package]
name = "remember"
version = "0.1.0"
edition = "2021"
description = "A CLI memory recall tool for agents - searches across conversation histories and perception data"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"

# Async traits
async-trait = "0.1"

# Hashing for cache keys
sha2 = "0.10"
hex = "0.4"

# Glob/path expansion
dirs = "5"

# Parallel futures
futures = "0.3"
